add color theme switch

--- a/popup/advatise_something.html
+++ b/popup/advatise_something.html
@@ -18,5 +18,6 @@
     </p>
     <p>もしバグを見つけたり、なにか要望があれば気軽に教えてください！</p>
     <p>連絡先： k1takaz3.pupupu@gmail.com</p>
+    <div><button>color theme</button></div>
   </body>
 </html>
