--- a/popup/advatise_something.html
+++ b/popup/advatise_something.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>moodle modifier</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <img
-      src="../images/MoodleModifier-header.png"
-      alt="moodle modifier header image"
+    src="../images/MoodleModifier-header.png"
+    alt="moodle modifier header image"
     />
     <h1>大学生の諸君！</h1>
     <h2>この拡張機能を使ってくれてありがとうございます！</h2>
@@ -18,6 +19,9 @@
     </p>
     <p>もしバグを見つけたり、なにか要望があれば気軽に教えてください！</p>
     <p>連絡先： k1takaz3.pupupu@gmail.com</p>
-    <div><button>color theme</button></div>
+    <div>
+      <button class="color-theme-switch" type="button">color theme</button>
+    </div>
+    <script src="popup.js"></script>
   </body>
 </html>
