--- a/popup/advatise_something.html
+++ b/popup/advatise_something.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>moodle modifier</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <img
-    src="../images/MoodleModifier-header.png"
-    alt="moodle modifier header image"
+      src="../images/MoodleModifier-header.png"
+      alt="moodle modifier header image"
     />
     <h1>大学生の諸君！</h1>
     <h2>この拡張機能を使ってくれてありがとうございます！</h2>
@@ -20,7 +20,8 @@
     <p>もしバグを見つけたり、なにか要望があれば気軽に教えてください！</p>
     <p>連絡先： k1takaz3.pupupu@gmail.com</p>
     <div>
-      <button class="color-theme-switch" type="button">color theme</button>
+      カラーテーマ
+      <button class="color-theme-switch" type="button">ライトモード</button>
     </div>
     <script src="popup.js"></script>
   </body>
