switch to toggle switch from button for colortheme

--- a/popup/advatise_something.html
+++ b/popup/advatise_something.html
@@ -19,9 +19,10 @@
     </p>
     <p>もしバグを見つけたり、なにか要望があれば気軽に教えてください！</p>
     <p>連絡先： k1takaz3.pupupu@gmail.com</p>
-    <div>
-      カラーテーマ
-      <button class="color-theme-switch" type="button">ライトモード</button>
+    <div class="color-theme">
+      <span><h2>ダークモード🌓</h2></span>
+      <input id="switch" type="checkbox" class="switch" />
+      <label for="switch"></label>
     </div>
     <script src="popup.js"></script>
   </body>
