--- a/src/popup/advatise_something.html
+++ b/src/popup/advatise_something.html
@@ -27,7 +27,9 @@
                     </p>
                     <p>
                         Twitter:
-                        <a href="https://twitter.com/MoodleModifier"
+                        <a
+                            href="https://twitter.com/MoodleModifier"
+                            target="_blank"
                             >@MoodleModifier</a
                         >
                     </p>
